--- a/css/style_css3.css
+++ b/css/style_css3.css
@@ -11,7 +11,29 @@ div.wrapper {
 }
 
 /* ----------------- ЧАСТЬ HEADER -----------------------*/
-
+header{
+    background: #4f52fe;
+    display: flex;
+    justify-content: center;
+    border-radius: 50px 50px 0px 0;
+}
+img#header-img-1{
+    width: 88px;
+    height: 200px;
+    margin-left: 50px;
+}
+h1 {
+    font-family: 'Rubik Mono One', sans-serif;
+    font-size: 60px;
+    text-align: center;
+    color: #fff;
+    text-shadow: 10px 10px 30px #2400ff, -10px -10px 30px #7e2bd9;
+    -webkit-text-stroke: 1px #fc78ff;
+    -webkit-text-fill-color: transparent;
+    letter-spacing: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 /* ----------------- ЧАСТЬ MAIN -----------------------*/
 main {
     position: relative;
@@ -43,6 +65,7 @@ aside.global_nav {
     position: sticky;
     background: #4F52FF;
     height: 60px;
+    border-radius: 0px 0px 50px 0;
 }
 
 nav.global-nav {
@@ -173,7 +196,6 @@ div.code{
     box-shadow: 10px 10px 30px #2400ff, -10px -10px 30px #7e2bd9;
 }
 
-
 pre.hljs{
     display: block;
     overflow-x: auto;
@@ -198,7 +220,6 @@ span.hljs-string{
 }
 
 pre.hljs{
-
     outline-style: solid;
 }
 
@@ -210,6 +231,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 0px 50px 50px 50px;
 }
 
 img#girl {
@@ -232,7 +254,6 @@ img#github {
 }
 
 div.elem-footer {
-
     display: flex;
     flex-direction: column;
 
@@ -242,7 +263,6 @@ div#img-foot {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
-
 }
 
 img#notion:hover {
@@ -299,307 +319,3 @@ img.symbol-navigation:hover {
 /* https://fls.guru/cssanimation.html */
 /* Шпаргалка по flex: */
 /* https://tpverstak.ru/flex-cheatsheet/ */
-
-
-
-
-
-/*@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap');
-
-body {
-    background-color: rgba(34, 35, 39, 0.93);
-}
-
-div.wrapper {
-    width: 1380px;
-    margin: auto;
-}
-
-
-main{
-    position: relative;
-}
-
-div.main{
-    display: flex;
-}
-
-h2 {
-    font-family: 'Rubik Mono One', sans-serif;
-    font-size: 30px;
-    text-align: center;
-    color: #fff;
-    text-shadow: 10px 10px 30px #2400ff, -10px -10px 30px #7e2bd9;
-    -webkit-text-stroke: 1px #fc78ff;
-    -webkit-text-fill-color: transparent;
-    letter-spacing: 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-h3 {
-    font-family: 'Noto Sans Mono', monospace;
-}
-
-aside.global_nav {
-    top: -1px;
-    position: sticky;
-    background: #4F52FF;
-    height: 60px;
-}
-
-nav.global-nav {
-    margin: auto;
-    width: 500px;
-    display: flex;
-    height: 100%;
-    justify-content: space-evenly;
-}
-
-nav.global-nav a {
-    color: aliceblue;
-    align-self: center;
-    padding: 5px;
-    border-radius: 10px;
-    background-color: #e3eafc;
-    color: #0d046d;
-    font-family: 'Noto Sans Mono', monospace;
-}
-
-nav.global-nav a:hover {
-    animation: run-left;
-    animation: run-left 1s ease infinite;
-}
-
-@keyframes run-left {
-    50% {
-        transform: translateX(-10px);
-    }
-}
-
-
-
-div.code{
-    display: block;
-    margin: 0px 500px 0px 350px ;
-}
-
-
-pre.hljs{
-    display: block; overflow-x: auto; padding: 0.5em; background: rgb(240, 240, 240); color: rgb(68, 68, 68);
-}
-
-span.hljs-meta{
-    color: rgb(26, 57, 197);
-}
-span.hljs-tag{
-    color: rgb(16, 170, 16);
-}
-span.hljs-name{
-    font-weight: 700;
-}
-span.hljs-attr{
-}
-span.hljs-string{
-    color: rgb(177, 31, 31);
-}
-
-pre.hljs{
-
-    outline-style: solid;
-}
-
-
-
-aside.left {
-    font-size: large;
-    font-family: 'Noto Sans Mono', monospace;
-    background: #4F52FF;
-    padding: 20px;
-}
-
-div.nav {
-    top: 100px;
-    position: sticky;
-}
-
-aside.left nav {
-    display: flex;
-    flex-direction: column;
-    left: 20px;
-    top: -290px;
-    position: relative;
-}
-
-aside.left a {
-    padding-bottom: 6px;
-    padding-top: 6px;
-    text-align: center;
-    color: #0d046d;
-}
-
-nav.page-nav {
-    background-image: url(images/girl-with-desk.png);
-    width: 210px;
-}
-
-img.img-nav {
-    width: 250px;
-    height: 415px;
-    position: sticky;
-}
-
-
-
-div.section {
-    padding: 10px;
-}
-
-article {
-    text-align: justify;
-}
-
-div.text {
-    background-color: #e3eafc;
-    padding: 20px;
-    border-radius: 50px;
-    margin-bottom: 40px;
-}
-
-p, ul, ol {
-    font-family: 'Noto Sans Mono', monospace;
-    font-size: 14px;
-    margin-right: 10px;
-}
-
-#article-1 {
-    padding: 15px;
-}
-
-article#article-1 img {
-    float: left;
-    width: 150px;
-    height: 275px;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin-top: 10px;
-}
-
-img.img-element {
-    display: block;
-    width: 500px;
-    float: right;
-    margin: 70px 10px 10px 10px;
-}
-
-img.img-attribute {
-    display: block;
-    width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-article#article-4 img {
-    margin: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
-}
-
-article#article-4 img.img1 {
-    float: right;
-    margin-left: 20px;
-    margin-bottom: 20px;
-}
-
-
-
-
-footer {
-    background: #4F52FF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-img#girl {
-    width: 100px;
-    height: 256px;
-}
-
-div#img-foot img {
-    margin: 2px;
-}
-
-img#notion {
-    width: 60px;
-    height: 61px;
-}
-
-img#github {
-    width: 60px;
-    height: 64px;
-}
-
-div.elem-footer {
-
-    display: flex;
-    flex-direction: column;
-
-}
-
-div#img-foot {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-
-}
-
-img#notion:hover {
-    animation: run-left;
-    animation: run-left 1s ease infinite;
-}
-
-img#github:hover {
-    animation: run-right;
-    animation: run-right 1s ease infinite;
-}
-
-@keyframes run-right {
-    50% {
-        transform: translateX(10px);
-    }
-}
-div#text {
-    background-color: #e3eafc;
-    border-radius: 50px;
-    padding: 10px;
-}
-
-footer p {
-    margin: 0 0 0 0;
-    text-align: center;
-}
-
-img.symbol-navigation {
-    display: block;
-    width: 100px;
-    height: 218px;
-    right: 50px;
-    top: 800px;
-    position: fixed;
-}
-
-img.symbol-navigation:hover {
-    animation: jump;
-    animation: jump 2s ease-in-out infinite ;
-}
-
-@keyframes jump {
-    100% {
-        transform: translateY(-1200px);
-    }
-}
-
-*/
